--- a/assets/style.css
+++ b/assets/style.css
@@ -31,6 +31,8 @@ body {
 }
 
 .menubar {
+  position: relative;
+  z-index: 20;
   height: 30px;
   display: flex;
   align-items: center;
@@ -168,9 +170,12 @@ body {
   flex: 1;
   min-height: 0;
   display: flex;
+  position: relative;
 }
 
 .sidebar {
+  position: relative;
+  z-index: 15;
   width: 260px;
   min-width: 240px;
   max-width: 300px;
@@ -455,6 +460,7 @@ body {
 }
 
 .canvas-wrap {
+  z-index: 1;
   flex: 1;
   min-width: 0;
   height: 100%;
